# Copyright 2026 Enactic, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "dora-openarm-ros2"
version = "1.0.0"
authors = [{name = "Enactic, Inc."}]
description = "Dora ROS2 converter for OpenArm"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "dora-rs==0.5.0",
  "pyarrow",
]

[dependency-groups]
dev = [
  "pytest >= 8.1.1",
  "ruff == 0.14.11", # sync with .pre-commit-config.yaml
]

[project.scripts]
openarm-dora-ros2 = "dora_ros2_bridge.main:main"

[project.urls]
Changelog = "https://github.com/enactic/dora-openarm-ros2/releases"
Issues = "https://github.com/enactic/dora-openarm-ros2/issues"
Repository = "https://github.com/enactic/dora-openarm-ros2.git"

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "UP"
]
